third_party/rust/phf_macros/tests/compile-fail/bad-syntax.stderr
error: expected identifier
 --> $DIR/bad-syntax.rs:5:5
  |
5 |     => //~ ERROR expected identifier
  |     ^^
